<resources>
    <string name="app_name">WeatherApp</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_weather">GET WEATHER</string>
    <string name="wind">Wind</string>
    <string name="precip">Precip</string>
    <string name="pressure">Pressure</string>
    <string name="_30_c">30 C</string>
    <string name="search_city">Search City</string>
    <string name="this_logo_is_for_weather">This logo is for Weather</string>
    <string name="this_icon_is_for_search">This icon is for search</string>
    <string name="feels_like">Feels Like</string>
    <string name="wind_degree">Wind Degree</string>
    <string name="humidity">Humidity</string>
    <string name="uv_index">UV Index</string>
    <string name="visibility">Visibility</string>
    <string name="belowcolored">BelowColored</string>
    <string name="belowstroke">BelowStroke</string>
</resources>
