<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F0F0F0"
    android:layout_height="match_parent"
    tools:context=".ui.MoreDetailsFragment">

    <TextView
        android:id="@+id/FeelsLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/feels_like"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/FeelsLikeTxt"
        android:fontFamily="@font/open_sans_semibold"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/FeelsLike"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toEndOf="@+id/FeelsLike"
        app:layout_constraintTop_toTopOf="@+id/FeelsLike"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/WindDegreeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/WindDegree"
        app:layout_constraintEnd_toEndOf="@+id/FeelsLikeTxt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/FeelsLikeTxt"
        app:layout_constraintTop_toTopOf="@+id/WindDegree"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/HumidTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/Humid"
        app:layout_constraintEnd_toEndOf="@+id/FeelsLikeTxt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/FeelsLikeTxt"
        app:layout_constraintTop_toTopOf="@+id/Humid"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/UvIndexTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/UvIndex"
        app:layout_constraintEnd_toEndOf="@+id/FeelsLikeTxt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/FeelsLikeTxt"
        app:layout_constraintTop_toTopOf="@+id/UvIndex"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/VisibTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/Visib"
        app:layout_constraintEnd_toEndOf="@+id/FeelsLikeTxt"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="@+id/FeelsLikeTxt"
        app:layout_constraintTop_toTopOf="@+id/Visib"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans"
        android:id="@+id/WindDegree"
        android:text="@string/wind_degree"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FeelsLike" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/Humid"
        android:fontFamily="@font/open_sans"
        android:text="@string/humidity"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/WindDegree" />

    <TextView
        android:id="@+id/UvIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/uv_index"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Humid" />

    <TextView
        android:id="@+id/Visib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/visibility"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UvIndex" />

</androidx.constraintlayout.widget.ConstraintLayout>